--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,25 @@ html, body {
     margin: 0;
 }
 
+/* Header Styling */
+.main-header {
+    color: white;
+    background-color: #336282;
+    width: 100%;
+    padding: 5px; /* Adjust padding to fit design */
+    position: fixed; /* Make header fixed at the top */
+    top: 0; /* Ensure it's at the top */
+    z-index: 1000; /* Ensure it stays on top */
+    font-size: 15px;
+}
+
+
+.main-header h1 {
+    color: #dce79a; /* Change this to the desired color */
+}
+
+
+
 body {
     display: flex;
     flex-direction: column;
@@ -45,6 +64,7 @@ p {
     flex: 1; 
     padding: 20px;
     margin-left: 30%; 
+    margin-top: 100px; /* Ensure content doesn't overlap header */
 }
 
 @media screen and (max-width: 750px) {
@@ -56,8 +76,8 @@ p {
 
 /* Footer */
 footer {
-    color: black;
-    background-color: #4079a0;
+    color: white;
+    background-color: #336282;
     width: 100%;
     padding: 5px;
     position: relative; 
@@ -72,11 +92,12 @@ footer {
     width: 30%; 
     position: fixed;
     height: 100%; 
+    top: 35px;
 }
 
 .navbar nav ul {
     list-style: none;
-    padding: 0;
+    padding: 60px;
     margin: 0;
     height: 100%; 
     display: flex;
@@ -86,16 +107,15 @@ footer {
 
 .navbar nav ul li {
     text-align: center;
-    margin: 10px 0;
+    margin: 10px 10;
 }
 
 .navbar nav ul li a {
     color: white;
     text-decoration: none;
     display: block;
-    padding: 35px 30px;
+    padding: 30px 30px;
     font-size: 20px;
-    white-space: nowrap; 
 }
 
 .navbar nav ul li a:hover {
@@ -106,8 +126,9 @@ footer {
 @media screen and (max-width: 750px) {
     .navbar {
         width: 100%; 
-        height: auto;
+        height: 100px;
         position: fixed;
+        top: 50px;
     }
 
     .navbar nav ul {
@@ -119,10 +140,9 @@ footer {
     }
 
     .navbar nav ul li a {
-        padding: 10px; /* Reduce padding to fit smaller screens */
-        font-size: calc(10px + 1vw); /* Dynamically adjust font size */
+        padding: 5px; /* Reduce padding to fit smaller screens */
+        font-size: 12px; /* Dynamically adjust font size */
         text-align: center; /* Ensure text stays centered */
-        overflow: hidden; /* Prevent overflow */
         white-space: nowrap; /* Ensure text stays on one line */
     }
 }
