--- a/styles.css
+++ b/styles.css
@@ -12,13 +12,13 @@ body {
     flex-direction: column;
     margin: 0 40px;
     background-color: rgb(173, 209, 240);
-    height: 100%;
+    min-height: 100vh;
 }
-
 
 
 /* Header Styling */
 .main-header {
+   
     color: white;
     background-color: #336282;
     width: 100%;
@@ -44,6 +44,9 @@ body {
     .main-header {
         text-align: center; /* Align center for smaller screens */
         padding: 10px; /* Add padding for spacing on smaller screens */
+        position: fixed;
+        width: calc(100% - 80px);
+    
     }
 
     .main-header h1 {
@@ -264,7 +267,7 @@ footer {
 
 .agerestricted label {
     display: block;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     font-weight: bold;
 }
 
